List construction error fix